--- a/src/sass/register.scss
+++ b/src/sass/register.scss
@@ -165,6 +165,7 @@ li{
     		color: #669aca;
     	}
     }
+
     .auto_login label{
 		position:relative;
 		input{
@@ -177,13 +178,15 @@ li{
 			cursor: pointer;
 		}
     }
+    .tips{
+    	height:30px;
+    }
     .login_btn button{
 	    width: 100%;
 	    height: 48px;
 	    background: #333;
 	    color: #fff;
 	    border: none;
-	    margin-top:30px;
 	    border-radius: 3px;
 	    font-size: 18px;
 	    font-family: "微软雅黑";
