--- a/src/css/home.css
+++ b/src/css/home.css
@@ -39,7 +39,6 @@ li {
 .headerbg {
   width: 100%;
   min-width: 1200px;
-  margin-bottom: 20px;
 }
 
 .headerbg .header_t_bg {
@@ -77,7 +76,6 @@ li {
 .headerbg .header_t_bg .header .head-app .app .ewm1 {
   padding-left: 15px;
   display: block;
-  position: relative;
 }
 
 .headerbg .header_t_bg .header .head-app .app .ewm1 .icon-app2 {
@@ -88,6 +86,7 @@ li {
 }
 
 .headerbg .header_t_bg .header .head-app .app .ewm {
+  display: none;
   position: absolute;
   top: 28px;
   border: 1px solid #ddd;
@@ -247,6 +246,10 @@ li {
 }
 
 /* 内容样式 */
+.lamp_lbt {
+  margin-top: 20px !important;
+}
+
 .special_offer {
   width: 1200px;
   margin: 0 auto;
