--- a/src/sass/goodslist.scss
+++ b/src/sass/goodslist.scss
@@ -32,7 +32,7 @@ li{
 .headerbg{
 	width:100%;
 	min-width: $wid;
-	// margin-bottom:20px;
+
 	.header_t_bg{
 		background:#fafafa;
 		.header{
@@ -58,7 +58,7 @@ li{
 		    		.ewm1{
 		    			padding-left: 15px;
 					    display: block;
-					    // position: relative;
+					    position: relative;
 					    .icon-app2{
 					    	display: block;
 						    width: 20px;
@@ -67,16 +67,13 @@ li{
 					    }
 		    		}
 		    		.ewm{
-		    			display:none;
 		    			position: absolute;
-	    				
 		    			top:28px;
 		    			border:1px solid #ddd;
 		    			padding:5px;
 		    			text-align:center;
 		    			a{
 		    				display: block;
-
 		    				span{
 		    					display: block;
 		    				}
@@ -105,6 +102,16 @@ li{
 					    background: url(../img/headico.png) no-repeat -40px 0;
 					    position: absolute;
 					    left:0;
+					}
+					.total_car{
+						position:absolute;
+						right:0;
+						bottom:-65px;
+						width:300px;
+						background:blue;
+						min-height:50px;
+						z-index:999;
+						display:none;
 					}
 				}
 			}
@@ -213,64 +220,317 @@ li{
 
 	}
 }
-/* 内容样式 */
-.lamp_lbt{
-	margin-top:20px!important;
-}
-.special_offer{
-	width:$wid;
-	margin:$mgauto;
-	.cut_title{
-		position:relative;
-		height: 54px;
-		margin: 23px 0 10px 0;
-		.line{
-			position:absolute;
-		    border-bottom: 1px solid #e8e8e8;
-		    top: 24px;
-		    left: 0;
-		    width: 100%;
-		    z-index: 1;
-		}
-		p{
-			position: relative;
-		    width: 260px;
-		    background: #fff;
-		    margin: 0 auto;
-		    text-align: center;
-		    font-size: 16px;
-		    font-family: 微软雅黑;
-		    color: #333;
-		    z-index: 2;
-		    span{
-			    color:#666; 
 
+// 咨询样式
+.consult{
+	position: fixed;
+    right: 0;
+    bottom:100px;
+    border:solid 1px #ddd;
+    background: #fff;
+    z-index: 2;
+    ul {
+	    li{
+	    	position:relative;
+	    	.consult_online{
+			    display:block;
+			    width: 58px;
+			    height: 46px;
+			    padding-top: 12px;
+			    border-bottom: solid 1px #ddd;
+			    em{
+		    	    display: block;
+				    width: 35px;
+				    height: 35px;
+				    background: url(../img/consult.png) no-repeat;
+				    margin: 0 auto;
+			    }
+	    	}
+		   	&:nth-child(2) em{
+		    	background-position:0 -35px;
+		    } 
+		    &:nth-child(3) em{
+		    	background-position:0 -70px;
+		    } 
+		    &:nth-child(4) em{
+		    	background-position:0 -105px;
 		    }
-		   
+		    &:hover{
+	    		background:#666;
+	    	}
+    		&:nth-child(1) :hover{
+		    	background-position:-35px 0;
+		    } 
+		    &:nth-child(2) :hover{
+		    	background-position:-35px -35px;
+		    } 
+		    &:nth-child(3) :hover{
+		    	background-position:-35px -70px;
+		    } 
+		    &:nth-child(4) :hover{
+		    	background-position:-35px -105px;
+		    }
+	    }
+	    
+    }
+}
+/* 内容样式 */
+.containerbg{
+	width:100%;
+	min-width:$wid;
+	background:#f5f5f5;
+	overflow:hidden;
+	.container{
+		width:$wid;
+		margin:10px auto;
+		.title{
+		    background: #fff;
+		    font-size:32px;
+		    margin-bottom: 10px;
+		    height:70px;
+		    line-height: 70px;
+		    padding-left: 15px;
+		}
+		.content{
+			width:$wid;
+			margin:$mgauto;
+			.content_left{
+				width:267px;
+				.list{
+				    background: #fff;
+				    margin-bottom: 10px;
+				    padding: 0 10px;
+					.listItem{
+					    height: 52px;
+					    line-height: 52px;
+					    font-size: 14px;
+					    cursor: pointer;
+					    .lt_state{
+				    	    font-size: 24px;
+  							  font-family: "宋体";
+					    }
+					}
+					.listItem_b{
+						display:none;
+						padding-bottom: 10px;
+   						border-top:1px solid #e8e8e8;
+   						.clear_chose{
+   							text-align: right;
+    						padding-top: 15px;
+   						}
+   						.chose{
+						    padding-left: 5px;
+						    ul li a {
+						    	display: block;
+							    position: relative;
+							    padding: 5px 0 5px 20px;
+							    overflow: hidden;
+							    white-space: nowrap;
+							    text-overflow: ellipsis;
+							    outline: none;
+							    .lstCheck,.lstLab{
+						    	    display: block;
+								    width: 14px;
+								    height: 14px;
+								    background: url(../img/listico.gif) no-repeat;
+								    position: absolute;
+								    left: 0;
+								    top: 7px;
+							    }
+							    .lstLab{
+									background-position:0 -14px;
+							    }
+						    }
+						    .priceChoose{
+					    	    padding: 15px 0 10px 0;
+					    	    .priceStart{
+				    	    	    margin-right: 5px;
+					    	    }
+					    	    .priceInt{
+				    	    	    border: solid 1px #ddd;
+								    width: 107px;
+								    height: 30px;
+								    outline:none;
+								    vertical-align: middle;
+					    	    }
+					    	     .priceEnd{
+				    	    	    margin-left: 5px;
+					    	    }
+						    }
+				    	    .chose_color{
+			    	    	    padding-left: 5px;
+			    	    	    .color_list{
+		    	    	    	    width: 50%;
+			    	    	    }
+				    	    }
+						    .pricebtn{
+					    	    display: inline-block;
+							    width: 100%;
+							    height: 34px;
+							    background: #333;
+							    color: #fff;
+							    text-align: center;
+							    line-height: 34px;
+							    vertical-align: middle;
+						    }
+   						}
+   					}
+				}
+			}
+			.content_fixed{
+				position:fixed;
+				top:0;
+			}
+			.content_right{
+			    width: 923px;
+   				position: relative;
+   				.rank{
+				    height: 55px;
+				    line-height: 55px;
+				    background: #fff;
+				    .proFilter{
+				    	margin-left: 25px;
+				    	span{font-weight: bold;}
+				    	a{   
+					    	margin-left: 35px;
+						    display: inline-block;
+						    padding-right: 12px;
+						    position: relative;
+						    .proSort{
+					    	    display: block;
+							    width: 10px;
+							    height: 12px;
+							    background: url(../img/crumbsIco.gif) no-repeat -62px 0;
+							    position: absolute;
+							    right: 0;
+							    top: 21px;
+						    }
+						}
+				    }
+				    .page{
+			    	    margin: 18px 20px 0 0;
+			    	    span{
+		    	    	    float: left;
+						    display: block;
+						    width: 20px;
+						    height: 20px;
+						    text-align: center;
+						    line-height: 20px;
+						    margin: 0 9px;
+			    	    }
+			    	    .page_active{
+						    background: #333;
+						    color: #fff;
+						    border: solid 1px #333;
+						    border-radius: 2px;
+			    	    }
+				    }
+   				}
+   				.goodslist{
+				    margin-top: 5px;
+    				width: 928px;
+    				ul li{
+    					float: left;
+					    width: 205px;
+					    padding: 10px;
+					    margin: 0 5px 5px 0;
+					    border: solid 1px #fff;
+					    background: #fff;
+					    transition-duration: .1s;
+					    transition-timing-function: linear;
+					    position: relative;
+					    .pic{
+						    display: block;
+						    width: 207px;
+						    height: 230px;
+						    text-align: center;
+						    padding-top: 10px;
+						    text-align:center;
+						    img{
+								display:block;
+								width:180px;
+								height:180px;
+							}
+						}
+						.global{
+						    width: 48px;
+						    height: 24px;
+						    margin-right: 10px;
+						    text-align: left;
+							padding: 0 20px 15px 20px;
+							.g_buy{
+								width: 48px;
+						   		height: 24px;
+	   							background: url(../img/saleTip1.png) -1px -3px no-repeat;
+							}
+						}	
+						.goodsname{
+							a{
+								display: block;
+								height: 45px;
+								padding: 0 20px 9px 20px;
+								line-height: 2;
+								text-align: left;
+								overflow: hidden;
+								white-space: nowrap;
+								-o-text-overflow: ellipsis;
+								text-overflow: ellipsis; 
+								text-decoration:none;
+								color:#666;
+								span{
+									font-weight: bold;
+									color:#000;
+								}
+							}
+						}
+						.price{
+						    height: 18px;
+				    		line-height: 18px;
+				   			padding: 1px 0;
+				      	    height: 26px;
+				    		padding: 0 20px;
+				    		text-align:left;
+				    		color:#666;
+						}
+						.goodsCar{
+							
+							padding: 0 20px;
+							.bigCar{
+								height:18px;
+								line-height: 18px;
+								width:50%;
+								border-radius: 10px;
+								color:#fff;
+								font-size:12px;
+								text-align:center;
+								background: #c53f40;
+							}
+						}
+    				}
+   				}
+   				.page{
+			    	    margin: 18px 20px 0 0;
+			    	    float:right;
+			    	    span{
+		    	    	    float: left;
+						    display: block;
+						    width: 20px;
+						    height: 20px;
+						    text-align: center;
+						    line-height: 20px;
+						    margin: 0 9px;
+			    	    }
+			    	    .page_active{
+						    background: #333;
+						    color: #fff;
+						    border: solid 1px #333;
+						    border-radius: 2px;
+			    	    }
+				    }
+			}
 		}
 	}
-	.special_left{
-	    float: left;
-    	width: 392px;
-    	.special_left_down{
-		    margin-top: 12px;
-    	}
-	}
-	.special_middle{
-	    float: left;
-	    width: 392px;
-	    height: 498px;
-	    margin: 0 12px;
-	    font-size: 0;
-	} 
-	.special_right{
-		float: left;
-		width: 392px;
-		.special_right_down{
-		    margin-top: 12px;
-    	}
-	}   
-
+	
 }
 
 /* 底部样式 */
@@ -278,15 +538,15 @@ li{
 	margin-top:20px;
 	border-top: 1px solid #e8e8e8;
 	.footer_t{
-    width: $wid;
-    overflow: hidden;
-    margin: $mgauto;
-    margin-bottom:20px;
-    padding-top: 40px;
+	    width: $wid;
+	    overflow: hidden;
+	    margin: $mgauto;
+	    margin-bottom:20px;
+	    padding-top: 40px;
 	    .no_link{
-    	    color: #333;
-    		font-size: 14px;
-    		margin-bottom:8px;
+		    color: #333;
+			font-size: 14px;
+			margin-bottom:8px;
 	    }
 	    .shopping_help{
 	    	padding-top: 10px;
@@ -302,15 +562,14 @@ li{
 	    			line-height: 25px;
 	    		}
 		    }
-
 	    }
 	    .service_phone{
 	    	@extend .shopping_help;
 	    	text-align:center;
 	    	
 	    	h5{
-    		    line-height: 65px;
-  				font-size: 24px;
+			    line-height: 65px;
+					font-size: 24px;
 	    	}
 	    	p{
 		    	line-height: 30px;
@@ -321,11 +580,11 @@ li{
 	    	p{
 	    		padding-top: 5px;
 	    		margin-bottom:20px;
-    		    color: #333;
-   				font-size: 14px;
+			    color: #333;
+					font-size: 14px;
 	    	}
 	    	input{
-    		    border-radius: 2px;
+			    border-radius: 2px;
 			    border: solid 1px #e8e8e8;
 			    width: 173px;
 			    height: 41px;
@@ -345,9 +604,8 @@ li{
 			    border-radius: 2px;
 	    	}
 	    }
-
 	    .download{
-    	    padding-left: 25px;
+		    padding-left: 25px;
 		    border-right: none;
 		    text-align: center;
 		    width: 275px;
@@ -358,7 +616,7 @@ li{
 		    	text-align:center;
 	    	    // margin-left: 20px;
 	    	    div{
-    	    	    margin-top: 20px;
+		    	    margin-top: 20px;
 				    border: 1px solid #e8e8e8;
 				    padding: 20px;
 				    span{
