--- a/src/css/details.css
+++ b/src/css/details.css
@@ -442,6 +442,7 @@ li {
 .containerbg {
   width: 100%;
   min-width: 1200px;
+  background: #f5f5f5;
   overflow: hidden;
 }
 
@@ -453,407 +454,169 @@ li {
 
 .containerbg .container {
   width: 1200px;
-  margin: 0 auto;
-  margin-top: 20px;
+  margin: 10px auto;
 }
 
-.containerbg .container .car_title {
+.containerbg .container .details {
+  background: #fff;
+  padding: 70px 0;
+}
+
+.containerbg .container .details .details_fl {
+  width: 510px;
+  margin-left: 95px;
+}
+
+.containerbg .container .details .details_fl .nor_img img {
+  height: 460px;
+  cursor: pointer;
+  border: 1px solid #ddd;
+}
+
+.containerbg .container .details .details_fr {
+  padding: 20px 0 0 85px;
+  width: 425px;
+}
+
+.containerbg .container .details .details_fr h1 {
+  font-weight: normal;
+}
+
+.containerbg .container .details .details_fr h1 a {
+  font-size: 24px;
+  display: block;
+  color: #333;
+  max-width: 361px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.containerbg .container .details .details_fr .details_name {
+  font-size: 14px;
+  margin: 4px 20px 10px 0;
+  max-width: 341px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.containerbg .container .details .details_fr .price_l {
+  display: block;
+  width: 60px;
   margin-bottom: 10px;
-  height: 43px;
-  border: solid 1px #e8e8e8;
-  background: #f5f5f5;
-  color: #333;
-  line-height: 43px;
 }
 
-.containerbg .container .car_title .title_01 {
-  width: 190px;
-}
-
-.containerbg .container .car_title .title_01 .allpro {
-  cursor: pointer;
-  line-height: 43px;
-}
-
-.containerbg .container .car_title .title_01 .allpro input {
-  margin: 0 3px 0 30px;
-  border: none;
-  font-size: 12px;
-  color: #6c6c6c;
-  padding-left: 5px;
-}
-
-.containerbg .container .car_title .title_02 {
-  width: 255px;
-}
-
-.containerbg .container .car_title .title_03 {
-  width: 175px;
-  text-align: center;
-}
-
-.containerbg .container .car_title .title_04 {
-  width: 215px;
-  text-align: center;
-}
-
-.containerbg .container .car_title .title_05 {
-  width: 185px;
-  text-align: center;
-}
-
-.containerbg .container .carList {
-  border: solid 1px #e8e8e8;
-  padding: 0 30px;
-  font-size: 14px;
-}
-
-.containerbg .container .carList .goodsList {
-  font-size: 14px;
-}
-
-.containerbg .container .carList .goodsList .tableList {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-.containerbg .container .carList .goodsList .tableList tr {
-  border-bottom: solid 1px #e8e8e8;
-}
-
-.containerbg .container .carList .goodsList .tableList tr td {
-  padding: 23px 0;
-}
-
-.containerbg .container .carList .goodsList .tableList .rel {
-  width: 415px;
-  position: relative;
-}
-
-.containerbg .container .carList .goodsList .tableList .rel .goods_check {
-  position: absolute;
-  top: 66px;
-  left: 0;
-}
-
-.containerbg .container .carList .goodsList .tableList .rel .car_goods_pic {
-  width: 98px;
-  height: 93px;
-  text-align: center;
-  padding-top: 5px;
-  margin-left: 30px;
-}
-
-.containerbg .container .carList .goodsList .tableList .rel .car_goods_pic img {
-  width: 75px;
-  height: 90px;
-}
-
-.containerbg .container .carList .goodsList .tableList .rel .car_goods_details {
-  margin-left: 30px;
-  text-align: left;
-  margin-top: 25px;
-}
-
-.containerbg .container .carList .goodsList .tableList .rel .car_goods_details p {
-  height: 23px;
-  line-height: 23px;
-  width: 250px;
-}
-
-.containerbg .container .carList .goodsList .tableList .rel .car_goods_details .goods_name {
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
-
-.containerbg .container .carList .goodsList .tableList .car_goods_price {
-  width: 175px;
-  text-align: center;
-}
-
-.containerbg .container .carList .goodsList .tableList .car_goods_num {
-  width: 215px;
-}
-
-.containerbg .container .carList .goodsList .tableList .car_goods_num div {
-  margin: 0 auto;
-  width: 102px;
-  overflow: hidden;
-  border: 1px solid #d9d9d9;
-}
-
-.containerbg .container .carList .goodsList .tableList .car_goods_num div a {
-  display: block;
-  float: left;
-  width: 22px;
-  height: 22px;
-  color: #333;
-  text-align: center;
-}
-
-.containerbg .container .carList .goodsList .tableList .car_goods_num div .num_jian {
-  border-right: 1px solid #d9d9d9;
-}
-
-.containerbg .container .carList .goodsList .tableList .car_goods_num div .num_jia {
-  border-left: 1px solid #d9d9d9;
-}
-
-.containerbg .container .carList .goodsList .tableList .car_goods_num div input {
-  display: block;
-  border: none;
-  float: left;
-  width: 56px;
-  height: 22px;
-  color: #333;
-  text-align: center;
-  line-height: 22px;
-}
-
-.containerbg .container .carList .goodsList .tableList .car_goods_total {
-  width: 185px;
-  text-align: center;
-}
-
-.containerbg .container .carList .goodsList .tableList .car_goods_del {
-  width: 128px;
-  padding-left: 20px;
-  margin: 0 auto;
-  text-align: left;
-  line-height: 2;
-}
-
-.containerbg .container .car_bar {
-  margin-top: 10px;
-  background: #fcfcfc;
-  border: solid 1px #e8e8e8;
-}
-
-.containerbg .container .car_bar .car_delete_l {
-  margin-top: 10px;
-}
-
-.containerbg .container .car_bar .car_delete_l .allDelete {
-  margin-right: 30px;
-  line-height: 43px;
-}
-
-.containerbg .container .car_bar .car_delete_l .allDelete .allpro {
-  cursor: pointer;
-}
-
-.containerbg .container .car_bar .car_delete_l .allDelete .allpro input {
-  margin: 0 3px 0 30px;
-  border: none;
-  font-size: 12px;
-  color: #6c6c6c;
-  padding-left: 5px;
-}
-
-.containerbg .container .car_bar .car_delete_l .allDelete_msg {
-  line-height: 43px;
-}
-
-.containerbg .container .car_bar .car_delete_l .allDelete_msg a {
-  margin-right: 30px;
-}
-
-.containerbg .container .car_bar .car_delete_r {
-  margin: 15px 30px 10px 0;
-  width: 350px;
-  border-bottom: solid 1px #ebebeb;
-  padding-bottom: 15px;
-  text-align: right;
-}
-
-.containerbg .container .car_bar .car_delete_r .total_price {
-  color: red;
-  font-weight: bolder;
+.containerbg .container .details .details_fr .price_b {
   font-size: 18px;
-}
-
-.containerbg .container .car_bar .continue_buy {
-  padding: 30px 30px 50px 30px;
-}
-
-.containerbg .container .car_bar .continue_buy .go_on_buy {
-  display: block;
-  width: 123px;
-  height: 46px;
-  font-size: 14px;
-  padding-left: 15px;
-  color: #fff;
-  border: solid 1px #ccc;
-  border-radius: 3px;
-  text-align: center;
-  line-height: 46px;
-  color: #666;
-  margin-top: 2px;
-  background: url(../img/goonbuy.gif) 25px 18px no-repeat;
-}
-
-.containerbg .container .car_bar .continue_buy .buying {
-  cursor: pointer;
-  width: 165px;
-  height: 50px;
-  background: #c43f40;
-  color: #fff;
-  border: none;
-  font-size: 16px;
   font-weight: bold;
-  border-radius: 3px;
 }
 
-.containerbg .container .like {
-  margin-top: 20px;
-  border: solid 1px #e8e8e8;
+.containerbg .container .details .details_fr .details_l {
+  width: 60px;
+  display: block;
+  margin-bottom: 10px;
 }
 
-.containerbg .container .like .your_fav {
-  height: 70px;
-  line-height: 70px;
-  border-bottom: solid 1px #e8e8e8;
-  margin: 0 30px;
+.containerbg .container .details .details_fr .allSize {
+  height: 28px;
+  line-height: 28px;
+  width: 60px;
 }
 
-.containerbg .container .like .goods_like {
-  width: 1140px;
-  margin: 0 auto;
-}
-
-.containerbg .container .like .goods_container {
-  visibility: visible;
-  overflow: hidden;
-  position: relative;
-  z-index: 2;
-  left: 0px;
-  width: 1048px;
-  padding: 20px 40px;
-  margin: 0 auto;
-}
-
-.containerbg .container .like .goods_container .goods_prev {
-  width: 17px;
-  height: 350px;
-  position: absolute;
-  left: 0;
-  z-index: 3;
+.containerbg .container .details .details_fr .size_num .size {
   background: #fff;
+  width: 42px;
+  height: 28px;
+  line-height: 28px;
+  text-align: center;
+  padding: 0 5px;
+  margin-right: 5px;
+  border: solid 1px #333;
+  color: #333;
+  border-radius: 2px;
   cursor: pointer;
 }
 
-.containerbg .container .like .goods_container .goods_prev p {
-  width: 17px;
-  position: absolute;
-  height: 38px;
-  top: 100px;
-  background: url(../img/pre_btn.png) no-repeat;
+.containerbg .container .details .details_fr .size_num .active {
+  background: #000;
+  color: #fff;
 }
 
-.containerbg .container .like .goods_container .goods_next {
-  width: 17px;
-  height: 350px;
-  position: absolute;
-  right: 0;
-  z-index: 3;
-  background: #fff;
-  cursor: pointer;
+.containerbg .container .details .details_fr p {
+  padding-left: 60px;
+  margin: 10px 0 20px 0;
 }
 
-.containerbg .container .like .goods_container .goods_next p {
-  width: 17px;
-  position: absolute;
-  height: 38px;
-  top: 100px;
-  background: url(../img/next_btn.png) no-repeat;
-}
-
-.containerbg .container .like .goods_container .like_list {
-  width: 100%;
-  position: relative;
-}
-
-.containerbg .container .like .goods_container .like_list ul {
-  overflow: hidden;
-  position: relative;
-  width: 6600px;
-}
-
-.containerbg .container .like .goods_container .like_list ul li {
-  width: 220px;
-  height: 350px;
-  margin: 0 24px;
-  text-align: center;
-}
-
-.containerbg .container .like .goods_container .like_list ul li .pic {
-  display: block;
-  text-align: center;
-  padding-top: 10px;
-  text-align: center;
-}
-
-.containerbg .container .like .goods_container .like_list ul li .pic img {
-  display: block;
-  width: 180px;
-  height: 180px;
-}
-
-.containerbg .container .like .goods_container .like_list ul li .global {
-  width: 48px;
-  height: 24px;
-  margin-right: 10px;
-  text-align: left;
-  padding: 10px 20px;
-}
-
-.containerbg .container .like .goods_container .like_list ul li .global .g_buy {
-  width: 48px;
-  height: 24px;
-  background: url(../img/saleTip1.png) -1px -3px no-repeat;
-}
-
-.containerbg .container .like .goods_container .like_list ul li .goodsname a {
-  display: block;
+.containerbg .container .details .details_fr .details_buy .buy_now {
+  background: #333;
+  width: 152px;
   height: 45px;
-  padding: 0 20px 9px 20px;
-  line-height: 2;
-  text-align: left;
-  overflow: hidden;
-  white-space: nowrap;
-  -o-text-overflow: ellipsis;
-  text-overflow: ellipsis;
-  text-decoration: none;
-  color: #666;
-}
-
-.containerbg .container .like .goods_container .like_list ul li .goodsname a i {
-  font-style: normal;
-}
-
-.containerbg .container .like .goods_container .like_list ul li .goodsname a span {
-  font-weight: bold;
-  color: #000;
-}
-
-.containerbg .container .like .goods_container .like_list ul li .price {
-  height: 18px;
-  line-height: 18px;
-  padding: 1px 0;
-  height: 26px;
-  padding: 0 20px;
-  text-align: left;
-  color: #666;
-}
-
-.containerbg .container .like .goods_container .like_list ul li .bigCar {
-  width: 126px;
-  height: 33px;
-  line-height: 33px;
-  border: solid 1px #e8e8e8;
-  margin-left: 20px;
+  font-size: 14px;
   cursor: pointer;
+  border-radius: 2px;
+  text-align: center;
+}
+
+.containerbg .container .details .details_fr .details_buy .buy_now a {
+  color: #fff;
+  line-height: 45px;
+}
+
+.containerbg .container .details .details_fr .details_buy .atc {
+  background: #c53f40;
+  margin-left: 10px;
+  width: 143px;
+  height: 45px;
+  font-size: 14px;
+  cursor: pointer;
+  border-radius: 2px;
+  text-align: center;
+}
+
+.containerbg .container .details .details_fr .details_buy .atc a {
+  color: #fff;
+  line-height: 45px;
+}
+
+.containerbg .container .details .details_fr .details_buy .details_share .collect {
+  border: solid 1px #e8e8e8;
+  margin-left: 10px;
+  display: inline-block;
+  width: 43px;
+  height: 43px;
+  background: url(../img/pst.gif) no-repeat;
+  background-position: 0 -13px;
+}
+
+.containerbg .container .details .details_fr .details_buy .details_share .share {
+  border: solid 1px #e8e8e8;
+  float: left;
+  width: 43px;
+  height: 43px;
+  margin-left: 20px;
+  background: url(../img/pst.gif) 0 -56px no-repeat;
+  position: relative;
+}
+
+.containerbg .container .details .details_fr .arrive {
+  padding: 15px 0;
+  height: 20px;
+  margin-top: 10px;
+  border-bottom: solid 1px #f5f5f5;
+}
+
+.containerbg .container .details .details_fr .arrive .arrive_time {
+  width: 78px;
+  float: left;
+  display: block;
+}
+
+.containerbg .container .details .details_fr .arrive span {
+  display: block;
+  width: 345px;
+  float: right;
+  display: block;
 }
 
 /* 底部样式 */
