--- a/src/sass/register.scss
+++ b/src/sass/register.scss
@@ -161,9 +161,10 @@ li{
     }
     .msg_send {
     	margin-top:10px;
-    	a{
-    		color: #669aca;
-    	}
+    	margin-right:30px;
+    	color: #669aca;
+    	font-size: 14px;
+    	
     }
 
     .auto_login label{
