--- a/src/css/login.css
+++ b/src/css/login.css
@@ -170,6 +170,10 @@ li {
   cursor: pointer;
 }
 
+.login .tips {
+  height: 30px;
+}
+
 .login .login_btn button {
   width: 100%;
   height: 48px;
