--- a/src/css/goodslist.css
+++ b/src/css/goodslist.css
@@ -1,41 +1,4 @@
 @charset "UTF-8";
-html, body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, menu, input, button, textarea, p, blockquote, th, td {
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  font: 12px "微软雅黑",Helvetica,sans-serif;
-  line-height: 1.5;
-  background-color: #fff;
-  color: #555;
-}
-
-a {
-  color: #666;
-  text-decoration: none;
-}
-
-li {
-  list-style: none;
-}
-
-.fl {
-  float: left;
-}
-
-.fr {
-  float: right;
-}
-
-.clearfix:after {
-  display: block;
-  clear: both;
-  content: ".";
-  visibility: hidden;
-  height: 0;
-}
-
 /* 内容样式 */
 .containerbg {
   width: 100%;
@@ -268,7 +231,7 @@ li {
 .containerbg .container .content .content_right .goodslist ul li .global {
   width: 48px;
   height: 24px;
-  margin-right: 10px;
+  margin: 10px 10px 0 0;
   text-align: left;
   padding: 0 20px 15px 20px;
 }
@@ -313,15 +276,17 @@ li {
 }
 
 .containerbg .container .content .content_right .goodslist ul li .goodsCar {
+  margin: 5px 0;
   padding: 0 20px;
 }
 
 .containerbg .container .content .content_right .goodslist ul li .goodsCar .bigCar {
+  padding: 5px 0;
   cursor: pointer;
   height: 18px;
   line-height: 18px;
   width: 50%;
-  border-radius: 10px;
+  border-radius: 5px;
   color: #fff;
   font-size: 12px;
   text-align: center;
