--- a/src/sass/home.scss
+++ b/src/sass/home.scss
@@ -106,6 +106,98 @@ li{
 					    position: absolute;
 					    left:0;
 					}
+					.total_car{
+						min-height: 150px;
+						min-width:250px;
+						position:absolute;
+						right:0;
+						top:28px;
+						border:1px solid #ddd;
+						z-index:999;
+						display:none;
+						background:#fff;
+						.mygoods{
+					   		padding: 20px 20px 5px 20px;
+   							color: #999;
+						}
+						.goods_total{
+							clear:both;
+							position:relative;
+							.goods_buy{	
+   								padding: 15px;
+								.single_goods{
+								    position: relative;
+								    padding-left:20px;
+								 	width:300px;
+								    .goods_url {
+								    	width:60px;
+								    	img{
+								    	    width: 60px;
+									    }
+								    }
+								    .goods_details {
+								    	margin-left:10px;
+								    	margin-top:10px;
+								    	margin-right:40px;
+								    	width:180px;
+									    overflow: hidden;
+									    white-space: nowrap;
+									    text-overflow: ellipsis;
+									    p{margin:5px 0;}
+									    .goods_brand{
+									    	font-weight: bold;
+									    }
+									    .goods_name{
+								    	    font: 12px;
+								    	    color:#999;
+									    }
+									    .goods_price .goods_qty{
+									    	color:red;
+									    }
+								    }
+								    .goods_delete{
+								    	
+							    	    font-size: 12px;
+									    position: absolute;
+									    right: 0;
+									    top: 20px;
+									    color: #ccc;
+									    font-family: "宋体";
+									    cursor: pointer;
+									    width: 30px;
+									    height: 30px;
+									    line-height: 30px;
+									    text-align: center;
+								    }
+								}
+							}
+   							.total_price{
+   								display: none;
+					    		background: #f7f7f7;
+							    line-height:42px;
+							    padding:10px 20px;
+							    width:100%;
+							    box-sizing:border-box;
+   								font-size: 14px;
+	   							.account{
+								    display: inline-block;
+								    width: 114px;
+								    height: 42px;
+								    border-radius:10px;
+								    background: #333;
+								    color: #fff;
+								    text-align: center;
+								    line-height: 42px;
+								    font-size: 14px;
+	   							}
+   							}
+   							.goods_emty{
+								position:absolute;
+								left:65px;
+								top:50%;
+							}
+						}
+					}
 				}
 			}
 		}
@@ -269,280 +361,77 @@ li{
 		.special_right_down{
 		    margin-top: 12px;
     	}
-	}   
-
-}
-
-/* 底部样式 */
-.footer{
-	margin-top:20px;
-	border-top: 1px solid #e8e8e8;
-	.footer_t{
-    width: $wid;
-    overflow: hidden;
-    margin: $mgauto;
-    margin-bottom:20px;
-    padding-top: 40px;
-	    .no_link{
-    	    color: #333;
-    		font-size: 14px;
-    		margin-bottom:8px;
-	    }
-	    .shopping_help{
-	    	padding-top: 10px;
-		    height: 200px;
-		    float: left;
-		    width: 299px;
-		    border-right: 1px solid #e8e8e8;
-		    ul{
-			    float: left;
-	    		width: 149px;
-	    		margin-bottom: 10px;
-	    		li{
-	    			line-height: 25px;
-	    		}
+	}  
+	.collected{
+		overflow:hidden;
+		position:relative;
+		.cart_prev{
+		    width: 17px;
+		    height: 300px;
+		    position: absolute;
+		    left:0;
+		    z-index: 3;
+		    background: #fff;
+		    cursor: pointer;
+		    .m_prev{
+			    height: 38px;
+			    width:17px;
+			    top: 100px;
+			    position: absolute;
+			    cursor: pointer;
+			    z-index: 5;
+			    left: 0;
+   				background: url(../img/pre_btn.png) no-repeat;
 		    }
-
-	    }
-	    .service_phone{
-	    	@extend .shopping_help;
-	    	text-align:center;
-	    	
-	    	h5{
-    		    line-height: 65px;
-  				font-size: 24px;
-	    	}
-	    	p{
-		    	line-height: 30px;
-	    	}
-	    }
-	    .supscrition{
-	    	@extend .service_phone;
-	    	p{
-	    		padding-top: 5px;
-	    		margin-bottom:20px;
-    		    color: #333;
-   				font-size: 14px;
-	    	}
-	    	input{
-    		    border-radius: 2px;
-			    border: solid 1px #e8e8e8;
-			    width: 173px;
-			    height: 41px;
-			    padding-left: 22px;
-			    background: #f5f5f5;
-			    line-height: 41px;
-	    	}
-	    	.booked a{
-	    		display: block;
-	    		// cursor: pointer;
-			    width: 197px;
-			    height: 49px;
-			    background: #333;
-			    color: #fff;
-			    line-height: 49px;
-			    margin: 25px auto 0;
-			    border-radius: 2px;
-	    	}
-	    }
-
-	    .download{
-    	    padding-left: 25px;
-		    border-right: none;
-		    text-align: center;
-		    width: 275px;
-	        padding-top: 10px;
-			height: 200px;
-			float: left;
-		    .download_app{
-		    	text-align:center;
-	    	    // margin-left: 20px;
-	    	    div{
-    	    	    margin-top: 20px;
-				    border: 1px solid #e8e8e8;
-				    padding: 20px;
-				    span{
-			    	    display: block;
-						width: 67px;
-						height: 67px;
-					    background: url(../img/down_app.png);
-				    }
-	    	    }
+		}
+		.cart_next{
+		    width: 17px;
+		    height: 300px;
+		    position: absolute;
+		    right:0;
+		    z-index: 3;
+		    background: #fff;
+		    cursor: pointer;
+		     .m_next{
+			    height: 38px;
+			    width:17px;
+			    top: 100px;
+			    position: absolute;
+			    cursor: pointer;
+			    z-index: 5;
+			    right: 0;
+   				background: url(../img/next_btn.png) no-repeat;
 		    }
-		    .download_wechat{
-		    	text-align:center;
-				div{
-				    border: 1px solid #e8e8e8;
-					padding: 20px;
-					margin-top: 20px;
-					span{
-					    display: block;
-						width: 67px;
-						height: 67px;
-					    background: url(../img/wechat.png);
-					}
-				}
-		    }
-			.clear{
-				clear:both;
-			}
-			p{
-			    text-align: right;
-				line-height: 60px;
-				color: #999;
-			}
-	    }
-	}
-	.footer_m{
-		clear:both;
-	    background: #414141;
-		width: 100%;
-		height: 280px;
-		min-width: $wid;
-		.promise ul{
-		    height: 138px;
-		    line-height: 138px;
-		    color: white;
-		    width: $wid;
-		    margin: $mgauto;
-		    background: #414141;
-		    li{
-	    	    float: left;
-   				font-size: 18px;
+		}
+		ul{
+			position: relative;
+   			z-index: 1;
+   			width:4000px;
+   			li{	
+			    overflow: hidden;
 			    text-align: center;
-			    div{
-		    	    position: relative;
-				    top: 42px;
-				    margin-right: 24px;
-				    float: left;
-				    width: 52px;
-				    height: 52px;
-				    background: url(../img/footer_icon.png) center;
-			    }
-			
-   				&:nth-child(1) div{
-   					background-position: right;
-   				}
-   				&:nth-child(2){
-		    		width: 765px;
-					text-align: center;
-					left: 28px;
-					div{
-					    position: relative;
-   						left: 299px;
-	   				}
-   				}
-   				&:nth-child(3) div{
-   					background-position: left;
-   				}
-		    }
+			    float: left;
+			    width: 160px;
+			    height: 260px;
+		        margin: 5px 20px 0 20px;
+		        img{
+	        	    width: 160px;
+					height: 192px;
+		        }
+		        p{
+	        	    width: 160px;
+				    height: 44px;
+				    padding-top: 0;
+				    overflow: hidden;
+				    color: #555;
+				    white-space: nowrap;
+				    text-overflow: ellipsis;
+		        }
+		        div{
+		        	color:#ccc;
+		        }
+   			}
 		}
-	    .footer_shadow{
-	    	height: 0;
-	    	width:100%;
-			border-bottom: 1px solid #333;
-			border-top: 1px solid #4d4d4d;
-	    }
-		.footer_b{
-			width:$wid;
-			margin:$mgauto;
-		    padding-top: 30px;
-	  	 	background: #414141;
-	  	 	color:#999;
-	  	 	.copyright{
-				margin-left:-10px;
-				width:437px;
-				ul {
-					overflow: hidden;
-					
-					li{
-					    text-align: center;
-					    float: left;
-					    height: 20px;
-					    width: 72px;
-					    border-left: 1px solid #999;
-					    line-height: 20px;
-					    
-					}
-					a{
-						color:#999;
-					}
-				}
-				p{
-				    padding-left: 12px;
-				    line-height: 47px;
-				}
-				div{
-				    padding-left: 12px;
-				    span{
-				    	margin-right:20px;
-				    }
-				}
-	  	 	}
-	  	 	.footer_cut{
-  	 		    float:left;
- 		        margin: 5px 1px 0 170px;
-			    height: 86px;
-			    border-right: 1px solid #333;
-			    border-left: 1px solid #4d4d4d;
-	  	 	}
-	  	 	.cooperation{
-	  	 		width:589px;
-				h6{
-					text-align: center;
-    				margin: 5px 0 23px;
-				}
-				ul{
-					overflow: hidden;
-					li{
-						float:left;
-					    padding: 0 17px
-					}
-					a{
-						display: block;
-						background: url(../img/cooperate_icon.png);
-					}
-					.cooperate1 a{
-						width: 18px;
-						height: 20px;
-					}
-					.cooperate2 a{
-						background:transparent;
-						span{
-							display: block;
-
-							float:left;
-							width: 31px;
-					    	height: 19px;
-					    	background:url(../img/cooperate_icon.png) -199px 0;
-						}
-						i{
-							color:#999;
-							float:left;
-						}
-					}
-					.cooperate3 a{
-						width: 68px;
-						height: 22px;
-						background: url(../img/footer.png) 0 -24px;
-					}
-					.cooperate4 a{
-					    width: 72px;
-					    height: 31px;
-					    background-position: -127px 0;
-					}
-					.cooperate5 a{
-						width: 60px;
-						height: 23px;
-						background-position: -66px 0;
-					}
-					.cooperate6 a{
-					    width: 77px;
-					    height: 23px;
-					    background: url(../img/footer.png) -77px -23px;
-					}
-				}
-	  	 	}
-		}
-	}
+		
+	} 
 }
